added 2 prints function to test

--- a/EPA1352-G01-A4/notebook/assignment4.ipynb
+++ b/EPA1352-G01-A4/notebook/assignment4.ipynb
@@ -50,6 +50,63 @@
     "bd_map\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello world')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T10:05:37.670612600Z",
+     "start_time": "2024-03-27T10:05:37.662055400Z"
+    }
+   },
+   "id": "713ecd88f0a55cca",
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('test')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-27T10:05:42.640190300Z",
+     "start_time": "2024-03-27T10:05:42.615057600Z"
+    }
+   },
+   "id": "a83d71c3e6a43804",
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "15627bb196ac52a"
   }
  ],
  "metadata": {
