Added header and code cell for my parts

--- a/EPA1352-G01-A4/notebook/assignment4.ipynb
+++ b/EPA1352-G01-A4/notebook/assignment4.ipynb
@@ -311,13 +311,60 @@
    "id": "e1cb5cdc1ba64ef9"
   },
   {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "# BMMS and Roads data\n",
+    "Here we will import ans use the BMMS and Roads data. Most of this originates from the previous assignments."
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "1235ef4a3a4e96c0"
+   "id": "d763436b81f3196"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "#code cell forr BMMS and Roads data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-28T09:59:33.541048500Z",
+     "start_time": "2024-03-28T09:59:33.504152400Z"
+    }
+   },
+   "id": "85dcbe7a6446a735",
+   "execution_count": 30
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Merging BMMS&Roads\n",
+    "This section will combine the traffic flow data from the RMMS dataset to the BMMS dataset.\n",
+    "\n",
+    "This will result in a dataframe containing information on the location, quality and traffic flow of each bridge. This will allow the further analysis on the criticallity and vulnerability of the bridges."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "888ff9fc7a342ed5"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "#code cell for the merge code"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-28T09:59:45.206115200Z",
+     "start_time": "2024-03-28T09:59:45.186697500Z"
+    }
+   },
+   "id": "3b94ec92f15db2fb",
+   "execution_count": 32
   }
  ],
  "metadata": {
