visual changes and some additions

--- a/EPA1352-G01-A4/notebook/top10assignment4.ipynb
+++ b/EPA1352-G01-A4/notebook/top10assignment4.ipynb
@@ -75,23 +75,6 @@
    "id": "d6c55753dae638a2"
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "# Filter DataFrame to find most vulnerable bridges (condition: D)\n",
-    "most_vulnerable = df[df['condition'] == 'D']"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-30T13:06:07.140518Z",
-     "start_time": "2024-03-30T13:06:07.125459100Z"
-    }
-   },
-   "id": "398640ff66ee8b03"
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "## Visualisations"
@@ -237,6 +220,19 @@
     }
    },
    "id": "5da6687ba8d56ac3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Filter DataFrame to find most vulnerable bridges (condition: D)\n",
+    "most_vulnerable = df[df['condition'] == 'D']"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "47a2ae4bb2eedfc5"
   },
   {
    "cell_type": "code",
