--- a/EPA1352-G01-A4/notebook/top10assignment4.ipynb
+++ b/EPA1352-G01-A4/notebook/top10assignment4.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import plotly.express as px"
+    "import seaborn as sns"
    ]
   },
   {
