some changes added 2

--- a/EPA1352-G01-A4/notebook/top10assignment4.ipynb
+++ b/EPA1352-G01-A4/notebook/top10assignment4.ipynb
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "source": [
     "## Vulnerability Analysis\n",
-    "Let us now look at the condition ratings to determine vulnerability."
+    "Let us now look at the condition ratings to determine vulnerability, with as secondary vulnerability indicator length."
    ],
    "metadata": {
     "collapsed": false
